<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScreenBuddy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="new_chara">New</string>
    <string name="load_chara">Load</string>
    <string name="save_chara">Save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Character</string>
    <string name="title_section2">Animations</string>
    <string name="title_section3">Images</string>
    <string name="change_preview_text">Change Preview Image</string>
    <string name="load_images_text">Add New Images</string>
    <string name="new_name_hint">Name</string>
    <string name="new_name_ok">OK</string>
    <string name="new_name_cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_image_selector">ImageSelector</string>
    <string name="configure">Configure: Select Character</string>

</resources>
