<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nin_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:background="@color/transparent_black"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/nin_shape"
        android:layout_margin="8dp"
        android:padding="6dp">

        <EditText
            android:id="@+id/new_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:maxLength="24"
            android:hint="@string/new_name_hint"/>

        <Button
            android:id="@+id/new_name_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_below="@id/new_name_edit_text"
            android:layout_alignParentEnd="true"
            android:text="@string/new_name_cancel"
            android:onClick="onNewItemCancel"/>

        <Button
            android:id="@+id/new_name_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_below="@id/new_name_edit_text"
            android:layout_toStartOf="@id/new_name_cancel_btn"
            android:text="@string/new_name_ok"
            android:onClick="onNewItemOK"/>

    </RelativeLayout>

</RelativeLayout>